--- a/html/users/login.html
+++ b/html/users/login.html
@@ -75,7 +75,7 @@
                   </label>
                 </div>
                 <div class="forgetpass">
-                  <a href="reset_password.html">
+                  <a href="forgot_password.html">
                     Quên mật khẩu?
                   </a>
                 </div>
