--- a/html/users/reset_password.html
+++ b/html/users/reset_password.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Đổi mật khẩu</title>
+  <title>Đặt lại mật khẩu</title>
   <link rel="stylesheet" type="text/css" href="../../css/user.css">
   <link href="../../fontawesome-free-5.13.0-web/css/all.css" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -49,15 +49,22 @@
         <div class="resetpass-wrap">
           <div class="resetpass-content">
             <div class="resetpass-title">
-              Cấp lại mật khẩu
+              Đặt lại mật khẩu
             </div>
-            <div class="resetpass-form">
+            <div class="login-form" id="admin-signup-form">
               <form action="" method="post" id="reset-password-form">
                 <div class="form-group">
-                  <label>Nhập địa chỉ email để nhận mất khẩu mới</label>
-                  <input class="resetpass-email" type="email" name="email" placeholder="Email">
+                  <label>Mật khẩu mới</label>
+                  <input class="resetpass-input" required="true" id="password" type="password" name="password" placeholder="Mật khẩu mới">
                 </div>
-                <button class="resetpass-btn" type="submit">submit</button>
+                <div class="form-group">
+                  <label class="password-confirm-label">Xác nhận mật khẩu</label>
+                  <span class="confirm-message" id='password-confirm-message'></span>
+                  <input class="resetpass-input" required="true" id="password-confirm" type="password" name="password_confirm" placeholder="Xác nhận mật khẩu">
+                </div>
+                <button class="resetpass-btn" type="submit">
+                  Xác nhận
+                </button>
               </form>
             </div>
           </div>
