--- a/html/admin/courses.html
+++ b/html/admin/courses.html
@@ -375,5 +375,40 @@
       </div>
     </form>
   </div>
+  <div class="modal fade" id="update-img-modal" tabindex="-1" role="dialog" aria-labelledby="mediumModalLabel" style="display: none; padding-left: 17px;">
+    <form action="" method="post" class="" id="update-img-form">
+      <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content">
+          <form id="update-img-form">
+            <div class="modal-header">
+              <h5 class="modal-title" id="modal-label">Update course's image</h5>
+              <button type="button" class="close close-updateimg-modal-btn" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">×</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              <div class="course-img-update">
+                <div class="title-course">Ảnh bìa khóa học</div>
+                <div class="course-image">
+                  <img alt="" id="load-course-image">
+                </div>
+                <div class="form-group">
+                  <div class="custom-file-image">
+                    <input type="file" id="course-img-file" class="input-custom" hidden="" accept="image/*">
+                    <label class="label-custom" for="course-img-file">Chọn</label>
+                    <span class="font-italic font13">Chấp nhận GIF, JPEG, PNG, BMP với kích thước tối đa 5.0 MB</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary close-updateimg-modal-btn" data-dismiss="modal">Cancel</button>
+              <button type="submit" class="btn btn-primary">Confirm</button>
+            </div>
+          </form>
+        </div>
+      </div>
+    </form>
+  </div>
 </body>
 </html>
