--- a/html/users/change_password.html
+++ b/html/users/change_password.html
@@ -7,11 +7,11 @@
   <link rel="stylesheet" type="text/css" href="../../css/user.css">
   <link href="../../fontawesome-free-5.13.0-web/css/all.css" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+<!--   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"> -->
   <script type="text/javascript" src="../../js/check_user_session.js"></script>
   <script type="text/javascript" src="../../js/check_user.js"></script>
   <script type="text/javascript" src="../../js/user.js"></script>
-  <script type="text/javascript" src="../../js/calendar.js"></script>
+<!--   <script type="text/javascript" src="../../js/calendar.js"></script> -->
   <script type="text/javascript" src="../../js/change_password.js"></script>
 </head>
 <body>
@@ -37,49 +37,6 @@
             </div>
             <div class="col-lg-5 col-md-4 col-sm-5 cate-sm">
               <ul class="unica-acc-zone" id="user-account-zone">
-                <li class="account-wrap">
-                  <div class="account-item clearfix js-item-menu">
-                    <div class="image">
-                      <img src="../../images/avatar-01.jpg" alt="John Doe">
-                    </div>
-                    <div class="content">
-                      <a class="js-acc-btn" href="#">john doe</a>
-                      <i class="fas fa-angle-down"></i>
-                    </div>
-                    <div class="account-dropdown js-dropdown">
-                      <div class="info clearfix">
-                        <div class="image">
-                          <a href="#">
-                            <img src="../../images/avatar-01.jpg" alt="John Doe">
-                          </a>
-                        </div>
-                        <div class="content">
-                          <h5 class="name">
-                            <a href="#">john doe</a>
-                          </h5>
-                          <span class="email">johndoe@example.com</span>
-                        </div>
-                      </div>
-                      <div class="account-dropdown__body">
-                        <div class="account-dropdown__item">
-                          <a href="#">
-                            <i class="fas fa-user"></i>Account
-                          </a>
-                        </div>
-                        <div class="account-dropdown__item">
-                          <a href="#">
-                            <i class="fas fa-cog"></i>Setting
-                          </a>
-                        </div>
-                      </div>
-                      <div class="account-dropdown__footer">
-                        <a href="#">
-                          <i class="fas fa-power-off"></i>Logout
-                        </a>
-                      </div>
-                    </div>
-                  </div>
-                </li>
               </ul>
             </div>
           </div>
@@ -158,101 +115,7 @@
           </div>
         </div>
       </div>
-      <div class="container col-sm-4 col-md-7 col-lg-4 mt-5">
-        <div class="card">
-          <h3 class="card-header" id="monthAndYear"></h3>
-          <table class="table table-bordered table-responsive-sm" id="calendar">
-            <thead>
-              <tr>
-                <th>Sun</th>
-                <th>Mon</th>
-                <th>Tue</th>
-                <th>Wed</th>
-                <th>Thu</th>
-                <th>Fri</th>
-                <th>Sat</th>
-              </tr>
-            </thead>
-
-            <tbody id="calendar-body">
-
-            </tbody>
-          </table>
-
-          <div class="form-inline">
-
-            <button class="btn btn-outline-primary col-sm-6" id="previous">Previous</button>
-
-            <button class="btn btn-outline-primary col-sm-6" id="next">Next</button>
-          </div>
-          <br/>
-          <form class="form-inline">
-            <label class="lead mr-2 ml-2" for="month">Jump To: </label>
-            <select class="form-control col-sm-4" name="month" id="month">
-              <option value=0>Jan</option>
-              <option value=1>Feb</option>
-              <option value=2>Mar</option>
-              <option value=3>Apr</option>
-              <option value=4>May</option>
-              <option value=5>Jun</option>
-              <option value=6>Jul</option>
-              <option value=7>Aug</option>
-              <option value=8>Sep</option>
-              <option value=9>Oct</option>
-              <option value=10>Nov</option>
-              <option value=11>Dec</option>
-            </select>
-
-
-            <label for="year"></label>
-            <select class="form-control col-sm-4" name="year" id="year">
-              <option value=1990>1990</option>
-              <option value=1991>1991</option>
-              <option value=1992>1992</option>
-              <option value=1993>1993</option>
-              <option value=1994>1994</option>
-              <option value=1995>1995</option>
-              <option value=1996>1996</option>
-              <option value=1997>1997</option>
-              <option value=1998>1998</option>
-              <option value=1999>1999</option>
-              <option value=2000>2000</option>
-              <option value=2001>2001</option>
-              <option value=2002>2002</option>
-              <option value=2003>2003</option>
-              <option value=2004>2004</option>
-              <option value=2005>2005</option>
-              <option value=2006>2006</option>
-              <option value=2007>2007</option>
-              <option value=2008>2008</option>
-              <option value=2009>2009</option>
-              <option value=2010>2010</option>
-              <option value=2011>2011</option>
-              <option value=2012>2012</option>
-              <option value=2013>2013</option>
-              <option value=2014>2014</option>
-              <option value=2015>2015</option>
-              <option value=2016>2016</option>
-              <option value=2017>2017</option>
-              <option value=2018>2018</option>
-              <option value=2019>2019</option>
-              <option value=2020>2020</option>
-              <option value=2021>2021</option>
-              <option value=2022>2022</option>
-              <option value=2023>2023</option>
-              <option value=2024>2024</option>
-              <option value=2025>2025</option>
-              <option value=2026>2026</option>
-              <option value=2027>2027</option>
-              <option value=2028>2028</option>
-              <option value=2029>2029</option>
-              <option value=2030>2030</option>
-            </select>
-          </form>
-        </div>
-      </div>
     </div>
-
   </main>
   <footer>
     <div id="footer2">
