--- a/html/users/teaching_schedule.html
+++ b/html/users/teaching_schedule.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Lịch giảng dạy</title>
+  <title>Các khóa học của tôi</title>
   <link rel="stylesheet" type="text/css" href="../../css/user.css">
   <link href="../../fontawesome-free-5.13.0-web/css/all.css" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -52,7 +52,6 @@
               <div class="u-cate-list user-nav">
                 <p>Khóa học của tôi</p>
                 <ul id="courses-list">
-
                 </ul>
               </div>
             </section>
@@ -61,39 +60,9 @@
             <div class="u-course-test tab-content show-inline" id="u-course-test">
               <div class="u-course-test-header">
                 <div class="top-stripe"></div>
-                <h2>Lịch giảng dạy</h2>
-                <p class="u-test-description">Khóa học Lập trình C</p>
+                <h2 id="course-name"></h2>
               </div>
               <div id="list-lessons">
-                <div class="quizitem normal open">
-                  <div class="quizitem-heading clear">
-                    <div class="right">
-                      <span class="indicator"><i class="fa fa-angle-down expand"></i></span>
-                    </div>
-                    <p class="tt-store">Bài 1: Giới thiệu về lập trình C</p>
-                  </div>
-                  <div class="quizitem-body show">
-                    <div class="lesson-description">
-                      Bài học sẽ được giảng dạy vào 9:00 18-6-2020
-                    </div>
-                    <form id="update-url-form">
-                      <div class="form-row">
-                        <div class="lb">Đường dẫn tới video live stream</div>
-                        <textarea class="form-control quiz-content-input" id="embbed-link"placeholder="Mã nhúng < >" rows="10" maxlength="800" required=""></textarea>
-                        <div class="update-question">
-                          <button type="submit" class="btn update-question-btn">
-                            Cập nhật
-                          </button>
-                        </div>
-                      </div>
-                    </form>
-                    <div class="form-row answer-wrap">
-                      <div class="lb clear">Xem trước video</div>
-                      <div class="preview-video" id="preview-block">
-                      </div>
-                    </div>
-                  </div>
-                </div>
               </div>
             </div>
           </div>
