--- a/html/admin/users.html
+++ b/html/admin/users.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Danh sách người dùng</title>
+  <title>Quản lý giáo viên</title>
   <link rel="stylesheet" type="text/css" href="../../css/style.css">
   <link href="../../fontawesome-free-5.13.0-web/css/all.css" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -239,7 +239,7 @@
           <div class="container-fluid">
             <div class="row">
               <div class="col-md-12">
-                <h3 class="title-5 m-b-35">Users Table</h3>
+                <h3 class="title-5 m-b-35">Teachers Table</h3>
                 <div class="table-data__tool">
                   <div class="table-data__tool-left">
                     <div class="rs-select2--light rs-select2--md">
