--- a/html/users/course_detail.html
+++ b/html/users/course_detail.html
@@ -10,6 +10,7 @@
   <script type="text/javascript" src="../../js/check_user_session.js"></script>
   <script type="text/javascript" src="../../js/check_user.js"></script>
   <script type="text/javascript" src="../../js/user.js"></script>
+  <script type="text/javascript" src="../../js/search_form.js"></script>
   <script type="text/javascript" src="../../js/course_detail.js"></script>
 <!--   <script>
     $(document).ready(function(){
@@ -32,7 +33,7 @@
               </div>
             </div>
             <div class="col-lg-5 col-md-6 col-sm-5 cate-sm">
-              <form class="unica-search-boxtop navbar-form form-inline" method="GET" action="/search">
+              <form class="unica-search-boxtop navbar-form form-inline" id="search-form">
                 <input autocomplete="off" name="key" type="text" class="form-control unica-form" placeholder="Tìm khóa học, giảng viên bạn quan tâm">
                 <button type="submit" class="btn unica-btn-search">
                   <i class="fa fa-search" aria-hidden="true"></i>
@@ -123,7 +124,7 @@
               <div class="u-intro tab-content" id="u-course-intro">
                 <div class="u-video">
                   <div class="embed-responsive embed-responsive-16by9">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/oWk5jHc4Ztk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/yDJbW0orv9Y" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                   </div>
                 </div>
                 <div class="u-learn-what">
@@ -188,10 +189,6 @@
                   <div class="uct-ava-gv"><img class="lazy" align="" src="https://unica.vn/uploads/nguyenthiDieuLinh/October72016904am_th-s-ruby-thao-tran_thumb.jpg" style=""></div>
                   <div class="uct-rate-gv">
                     <ul>
-                      <li>
-                        <i class="fa fa-users" aria-hidden="true"></i>
-                        <span>7367</span> học viên
-                      </li>
                       <li><i class="fa fa-play-circle" aria-hidden="true"></i> <span>2</span> khóa học</li>
                     </ul>
                   </div>
