--- a/html/users/teaching_schedule.html
+++ b/html/users/teaching_schedule.html
@@ -10,6 +10,7 @@
   <script type="text/javascript" src="../../js/check_user_session.js"></script>
   <script type="text/javascript" src="../../js/check_user.js"></script>
   <script type="text/javascript" src="../../js/user.js"></script>
+  <script type="text/javascript" src="../../js/search_form.js"></script>
   <script type="text/javascript" src="../../js/teaching_schedule.js"></script>
 </head>
 <body>
@@ -26,7 +27,7 @@
               </div>
             </div>
             <div class="col-lg-5 col-md-6 col-sm-5 cate-sm">
-              <form class="unica-search-boxtop navbar-form form-inline" method="GET" action="/search">
+              <form class="unica-search-boxtop navbar-form form-inline" id="search-form">
                 <input autocomplete="off" name="key" type="text" class="form-control unica-form" placeholder="Tìm khóa học, giảng viên bạn quan tâm">
                 <button type="submit" class="btn unica-btn-search">
                   <i class="fa fa-search" aria-hidden="true"></i>
