--- a/html/admin/courses.html
+++ b/html/admin/courses.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Danh sách khóa học</title>
+  <title>Quản lý khóa học</title>
   <link rel="stylesheet" type="text/css" href="../../css/style.css">
   <link href="../../fontawesome-free-5.13.0-web/css/all.css" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -344,7 +344,7 @@
       <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
           <div class="modal-header">
-            <h5 class="modal-title" id="modal-label">Create new course</h5>
+            <h5 class="modal-title" id="modal-label">Update course</h5>
             <button type="button" class="close close-updateco-modal-btn" data-dismiss="modal" aria-label="Close">
               <span aria-hidden="true">×</span>
             </button>
@@ -364,7 +364,8 @@
             </div>
             <div class="form-group">
               <label class="form-control-label">Teacher</label>
-              <input type="text" id="update-course-teacher" name="updateco-teacher" placeholder="Teacher" class="form-control" readonly>
+              <select id="updateco-teacher"class="form-control">
+              </select>
             </div>
           </div>
           <div class="modal-footer">
