--- a/html/admin/dashboard.html
+++ b/html/admin/dashboard.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Khóa học: Quản trị mạng</title>
+  <title>Tổng quan</title>
   <link rel="stylesheet" type="text/css" href="../../css/style.css">
   <link href="../../fontawesome-free-5.13.0-web/css/all.css" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -272,7 +272,7 @@
                         <i class="fas fa-book"></i>
                       </div>
                       <div class="text">
-                        <h2>388,688</h2>
+                        <h2 id="number-courses"></h2>
                         <span>Khóa học</span>
                       </div>
                     </div>
