--- a/html/admin/subjects.html
+++ b/html/admin/subjects.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Danh sách khóa học</title>
+  <title>Quản lý lĩnh vực</title>
   <link rel="stylesheet" type="text/css" href="../../css/style.css">
   <link href="../../fontawesome-free-5.13.0-web/css/all.css" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
