--- a/html/users/change_password.html
+++ b/html/users/change_password.html
@@ -12,6 +12,7 @@
   <script type="text/javascript" src="../../js/check_user.js"></script>
   <script type="text/javascript" src="../../js/user.js"></script>
 <!--   <script type="text/javascript" src="../../js/calendar.js"></script> -->
+<script type="text/javascript" src="../../js/search_form.js"></script>
   <script type="text/javascript" src="../../js/change_password.js"></script>
 </head>
 <body>
@@ -28,7 +29,7 @@
               </div>
             </div>
             <div class="col-lg-5 col-md-6 col-sm-5 cate-sm">
-              <form class="unica-search-boxtop navbar-form form-inline" method="GET" action="/search">
+              <form class="unica-search-boxtop navbar-form form-inline" id="search-form">
                 <input autocomplete="off" name="key" type="text" class="form-control unica-form" placeholder="Tìm khóa học, giảng viên bạn quan tâm">
                 <button type="submit" class="btn unica-btn-search">
                   <i class="fa fa-search" aria-hidden="true"></i>
